--- a/less/widget/photoview.2.dialog.less
+++ b/less/widget/photoview.2.dialog.less
@@ -56,6 +56,7 @@
                    float:left;
                    width:780px;
                    height:590px;
+                   text-align:center;
                    line-height:590px;
                    &.cur{
                         display:block;
@@ -313,7 +314,11 @@
             width:60px;
             height:60px;
             overflow:hidden;
-            margin-left:6px;
+            margin-left:4px;
+            border:1px solid #464646; 
+            &.on{
+                border-color:#C9775F;
+            }
             //img{
             //    width:60px;
             //}
