Signed-off-by: Dora <babyvox1990@vip.qq.com>

--- a/less/widget/photoview.2.dialog.ie.less
+++ b/less/widget/photoview.2.dialog.ie.less
@@ -1,4 +1,4 @@
 // 
 .mod-photo-view-con .close-btn{
-	_background:url("//@{base-url}share/close1-ie.png") left top no-repeat;
+	background:url("//@{base-url}share/close1-ie.png") left top no-repeat;
 }
