--- a/css/widget/photoview.2.dialog.css
+++ b/css/widget/photoview.2.dialog.css
@@ -1,6 +1,6 @@
 .mod-photo-view{width:780px;position:absolute;}
-.mod-photo-view-con{background:url("//honey.hunantv.com/i/image/share/photobg.png") 0 0 repeat-y;width:780px;position:relative;}.mod-photo-view-con .close-btn{display:block;position:absolute;width:37px;height:37px;background:url("//honey.hunantv.com/i/image/share/close1.png") 0 0 no-repeat;right:-15px;top:-15px;cursor:pointer;z-index:10;}
-.mod-photo-view-con .con-left{float:left;width:780px;position:relative;}.mod-photo-view-con .con-left .prev-cur,.mod-photo-view-con .con-left .photo-next{display:block;width:390px;height:590px;cursor:url("http://i1.hunantv.com/ui/2011/images/gallery_cur_prev.cur"),auto;position:absolute;top:0;}.mod-photo-view-con .con-left .prev-cur:hover,.mod-photo-view-con .con-left .photo-next:hover{text-decoration:underline;}
+.mod-photo-view-con{background:url("//honey.hunantv.com/i/image/share/photobg.png") 0 0 repeat-y;width:780px;position:relative;}.mod-photo-view-con .close-btn{display:block;position:absolute;width:45px;height:45px;background:url("//honey.hunantv.com/i/image/share/close1.png") left top no-repeat;right:-19px;top:-19px;cursor:pointer;z-index:10;}
+.mod-photo-view-con .con-left{float:left;width:780px;position:relative;}.mod-photo-view-con .con-left .prev-cur,.mod-photo-view-con .con-left .photo-next{display:block;width:390px;height:590px;cursor:url("http://i1.hunantv.com/ui/2011/images/gallery_cur_prev.cur"),auto;position:absolute;z-index:9;top:0;}.mod-photo-view-con .con-left .prev-cur:hover,.mod-photo-view-con .con-left .photo-next:hover{text-decoration:underline;}
 .mod-photo-view-con .con-left .prev-cur{left:0;}
 .mod-photo-view-con .con-left .photo-next{right:0;cursor:url("http://i1.hunantv.com/ui/2011/images/gallery_cur_next.cur"),auto;}
 .mod-photo-view-con .con-left .con-lpic-box{width:780px;height:590px;display:table-cell;vertical-align:middle;}.mod-photo-view-con .con-left .con-lpic-box ul{width:780px;height:590px;overflow:hidden;}.mod-photo-view-con .con-left .con-lpic-box ul li{display:none;float:left;width:780px;height:590px;text-align:center;line-height:590px;}.mod-photo-view-con .con-left .con-lpic-box ul li.cur{display:block;}
@@ -26,8 +26,8 @@
 .mes-tex{width:100%;padding:15px 0;}.mes-tex .mes-tex-til{width:100%;display:block;color:#777;padding-bottom:10px;text-align:left;}
 .mes-tex textarea{border:1px solid #d8d8d8;background:#fff;padding:4px;width:220px;height:45px;}
 .photo-vlist{width:780px;height:110px;position:relative;}
-.mod-photo-view-ulbg{width:780px;height:110px;background:#000;opacity:0.7;}
+.mod-photo-view-ulbg{width:780px;height:110px;background:#000;filter:alpha(opacity=70);opacity:0.7;}
 .mod-photo-view-ulbox{width:780px;height:110px;position:absolute;left:0;top:0;}.mod-photo-view-ulbox .ulbox-btn{display:block;width:53px;height:110px;float:left;background:url("//honey.hunantv.com/i/image/icon/leftbtn.png") center center no-repeat;cursor:pointer;}.mod-photo-view-ulbox .ulbox-btn:hover{opacity:0.8;}
 .mod-photo-view-ulbox .ulbox-btn.r-btn{background:url("//honey.hunantv.com/i/image/icon/rightbtn.png") center center no-repeat;}
 .mod-photo-view-ulbox .ulbox-list{width:659px;padding:23px 0;height:64px;margin:0 7px;overflow:hidden;float:left;}
-.mod-photo-view-ulbox .mod-photo-view-ullist{width:1000px;}.mod-photo-view-ulbox .mod-photo-view-ullist li{float:left;width:60px;height:64px;overflow:hidden;margin-left:2px;border:2px solid #464646;}.mod-photo-view-ulbox .mod-photo-view-ullist li.on{border-color:#C9775F;}
+.mod-photo-view-ulbox .mod-photo-view-ullist{width:1000px;}.mod-photo-view-ulbox .mod-photo-view-ullist li{float:left;display:inline;width:60px;height:64px;overflow:hidden;margin-left:2px;border:2px solid #464646;}.mod-photo-view-ulbox .mod-photo-view-ullist li.on{border-color:#C9775F;}
