Signed-off-by: Dora <babyvox1990@vip.qq.com>

--- a/less/widget/photoview.2.dialog.less
+++ b/less/widget/photoview.2.dialog.less
@@ -15,7 +15,7 @@
         position:absolute;
         width:45px;
         height:45px;
-        background:url("//@{base-url}share/close1.png") left top no-repeat;
+        background:url("//@{base-url}share/close1-ie.png") left top no-repeat;
         right:-19px;
         top:-19px;
         cursor:pointer;
