--- a/less/widget/photoview.2.dialog.ie.less
+++ b/less/widget/photoview.2.dialog.ie.less
@@ -1,4 +1,4 @@
 // 
 .mod-photo-view-con .close-btn{
-	background:url("//@{base-url}share/close1-ie.png") left top no-repeat;
+	background:url("//@{base-url}share/close1.png") left top no-repeat;
 }
