photo view auto height

--- a/less/honey.less
+++ b/less/honey.less
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6, input, textarea, select, button {
 }
 /* 去掉图片的默认间隙 */
 img {
-    display: block;
+    //display: block;
 }
 
 body {
