--- a/less/widget/photoview.2.dialog.less
+++ b/less/widget/photoview.2.dialog.less
@@ -72,7 +72,7 @@
             //            display:block;
             //       } 
             .img-loading{
-                display:none;
+                display:block;
                 margin:20px auto;
                 width:100px;
                 height:100px;
