--- a/less/widget/photoview.2.dialog.less
+++ b/less/widget/photoview.2.dialog.less
@@ -336,6 +336,7 @@
             height:60px;
             overflow:hidden;
             margin-left:2px;
+            margin-top:2px;
             border:2px solid #464646; 
             &.on{
                 border-color:#C9775F;
