--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -74,6 +74,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             .content {
                 color: #222;
                 font-size: 14px;
+                word-break: break-all;
             }
             .actions {
                 text-align: right;
@@ -309,6 +310,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                 }
                 img {
                     vertical-align: bottom;
+                    display: inline-block !important;
                 }
             }
         }
