--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -39,16 +39,16 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             }
             &.page-btnl{
                 padding:5px 10px;
-                background:url("//@{base-url}icon/btn1.png") no-repeat center center;
+                background:url("//@{public-url}icon/btn1.png") no-repeat center center;
                 &:hover{
-                    background:url("//@{base-url}icon/btn1-0.png") no-repeat center center;
+                    background:url("//@{public-url}icon/btn1-0.png") no-repeat center center;
                 }
             }
             &.page-btnr{
                 padding:5px 10px;
-                background:url("//@{base-url}icon/btn2.png") no-repeat center center;
+                background:url("//@{public-url}icon/btn2.png") no-repeat center center;
                 &:hover{
-                    background:url("//@{base-url}icon/btn2-0.png") no-repeat center center;
+                    background:url("//@{public-url}icon/btn2-0.png") no-repeat center center;
                 }
             }
         }
